# cariinkerja.id

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  README.md  SECURITY.md  about.md  beforeyoubuy.md  components.json  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  main.py  mundane.md  package-lock.json  package.json  producthunt.md  pyproject.toml  update.sh  vite.config.ts
.codegraph/: daemon.pid
.docs/: current-stats.md
.docs/pitch/: pitch-deck.html
.github/: FUNDING.yml
.rest/: jobs.http
.rest/mayar/: create_invoice.http  invoice_create.http  payment_create.http  payment_status.http  test_webhook.http  webhook_register.http  webhook_test.http
api/v1/: assessments_api.py  auth_api.py  billing_api.py  dashboard_api.py  landing_api.py  urls.py  (+4 more)
assessment/: admin.py  consts.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
billing/: admin.py  forms.py  models.py  tests.py  upgrades.py
core/: admin.py  apps.py  auth.py  dashboard_cache.py  forms.py  models.py  openai.py  realtime.py  settings.py  signals.py  tasks.py  tests.py  urls.py  views.py
docker/: backend-entrypoint.sh
docs/: payment-mechanism.md
frontend/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml
jobs/: admin.py  consts.py  forms.py  models.py  services.py  tasks.py  tests.py  url_builders.py  urls.py  views.py
profiles/: admin.py  apps.py  consts.py  methods.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
src/: main.tsx
templates/: dashboard.html  dashboard_base.html
(+211 files in other folders)
