[project]
name = "cariinkerja-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bson>=0.5.10",
    "django>=5.2.13",
    "djangorestframework>=3.17.1",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "openai>=2.33.0",
    "ruff>=0.15.12",
]
