[project]
name = "cariinkerja-id"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bson>=0.5.10",
    "celery[redis]>=5.4",
    "curl-cffi>=0.7.4",
    "django>=5.2.13",
    "django-celery-beat>=2.7",
    "django-cors-headers>=4.4",
    "python-dotenv>=1.0",
    "djangorestframework>=3.17.1",
    "google-auth>=2.35",
    "gunicorn>=23",
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "openai>=2.33.0",
    "ruff>=0.15.12",
    "whitenoise>=6.12.0",
    "apify-client>=2.5.0",
]
